feat: add login route and logic
